--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
   <title>React App</title>
 </head>
 
-<body class="appWrapper scheme-default default-scheme-color header-fixed aside-fixed rightbar-hidden device-md">
+<body class="appWrapper header-fixed aside-fixed rightbar-hidden device-md">
   <noscript>
     You need to enable JavaScript to run this app.
   </noscript>
